# open5gs

configs/open5gs/: amf.yaml.in
lib/: meson.build
lib/metrics/: context.c  context.h  meson.build  ogs-metrics.c  ogs-metrics.h
src/amf/: init.c  meson.build  metrics.c  metrics.h
